# classificar-temas-questoes

./: .gitignore  bd_questoes.xlsx  lista_assuntos.xlsx  main.py  pyproject.toml  selecoes.json
